# rasm

./: .gitignore  README.md  rasm.py  run_tests.sh  setup.cfg  teletext.s
examples/: blink.s
test/: arithlog.s  arithlog_hex.txt  bits.s  bits_hex.txt  branches.s  branches_hex.txt  infloop.s  jumps.s  jumps_hex.txt  mcuctrl.s  mcuctrl_hex.txt  syntax.s  syntax_hex.txt  variables.s  variables_hex.txt  vectors.s  vectors_hex.txt  xfer.s  xfer_hex.txt
