[metadata]
name = rasm
version = 0.1.0
author = Rasmus Bondesson
author_email = raek@raek.se
url = https://github.com/raek/rasm
description = Assembler for 8-bit AVR microcontrollers
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Assembly
    Topic :: Software Development :: Assemblers
    Topic :: Software Development :: Embedded Systems

[options]
py_modules = rasm
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    rasm = rasm:main

[flake8]
max_line_length = 120
ignore =
    E221 # multiple spaces before operator
    E222 # multiple spaces after operator
    E241 # multiple spaces after ','